add dark theme, change components and small error

--- a/src/assets/stylus/components/aside-filter.styl
+++ b/src/assets/stylus/components/aside-filter.styl
@@ -3,6 +3,7 @@
   background #fff
   box-shadow standart-boxshadow
   padding 30px 40px 0
+  border-radius 20px
 
   @media (max-width breakpoint-xl)
     background transparent
