--- a/src/assets/stylus/components/inner-page.styl
+++ b/src/assets/stylus/components/inner-page.styl
@@ -15,6 +15,20 @@
   @media (max-width breakpoint-xl)
     max-width 100%
     margin-right 0
+	&__containercontainer 
+		width 100%
+
+.news
+
+	.inner-page__main
+		display flex
+		flex-direction row
+		max-width 100%
+		margin-right 0
+	
+	.inner-page__main__container 
+		width 100%
+		margin-right 40px
 
 .inner-page__aside
   flex none
