--- a/src/assets/stylus/components/select.styl
+++ b/src/assets/stylus/components/select.styl
@@ -8,5 +8,5 @@
   -moz-appearance none
   -webkit-appearance none
   appearance none
-  background #fff url('/static/img/arrow-bottom.png') no-repeat calc(100% - 10px) 16px
+  background #fff url('/static/img/arrow__select.svg') no-repeat calc(100% - 10px) 16px
 
