--- a/src/assets/stylus/components/search.styl
+++ b/src/assets/stylus/components/search.styl
@@ -8,10 +8,11 @@
 .search__input
   border 1px solid #CBCBCB
   box-sizing border-box
-  height 35px
-  padding 0 15px
+  padding 10px 15px
+  font-size 14px
   display block
   width 100%
+  border-radius 5px
 
 .search__row
   display flex
@@ -22,3 +23,5 @@
   font-weight 300
   font-size 13px
   color #A4A4B8
+.search-filter__block.tags
+   max-width 100% !important
