--- a/src/assets/stylus/components/user-info-form.styl
+++ b/src/assets/stylus/components/user-info-form.styl
@@ -1,13 +1,9 @@
 .user-info-form__block
-  display flex
-  max-width 680px
-  margin 0 auto
-
   &+&
     margin-top 30px
   
   &--actions
-    margin-top 40px
+    margin-top 20px
 
     .btn + .btn
       margin-left 20px
@@ -18,17 +14,18 @@
   
     .btn
       height 35px
+  
+    .btn
+      height 35px
 
 .user-info-form__label_stylus
   font-size 15px
   display flex
   align-items center
   justify-content flex-end
-  margin-right 30px
-  text-align right
   color #5F5E7A
-  width 190px
-  height 35px
+  margin-bottom 10px
+  padding-left 10px
   white-space nowrap
 
   @media (max-width breakpoint-xl)
@@ -37,24 +34,22 @@
 .user-info-form__wrap
   display flex
   width 100%
-  max-width 460px
 
   @media (max-width breakpoint-xl)
     max-width 100%
   
 .user-info-form__input_stylus
   width 100%
-  height 35px
   border 1px solid #E3E3E3
-  padding 0 20px
+  padding 15px 20px
   font-size 15px
   color #000
-  cursor pointer
   display flex
   align-items center
   white-space nowrap
   overflow hidden
   position relative
+  border-radius 10px
 
   &::placeholder
     color #B0B0BC
@@ -72,6 +67,8 @@
   
 .user-info-form__photo-wrap
   display flex
+  align-items center
+  justify-content center
 
 .setting-main__photo-delete
   max-width 100%
