--- a/src/assets/stylus/pages/friends.styl
+++ b/src/assets/stylus/pages/friends.styl
@@ -1,7 +1,7 @@
 .friends__header
   display flex
   align-items flex-end
-  justify-content space-between
+  justify-content flex-start
   gap 40px
   margin-bottom 25px
   padding-bottom 25px
