--- a/src/assets/stylus/components/form.styl
+++ b/src/assets/stylus/components/form.styl
@@ -148,10 +148,9 @@
     background-color cyan
 
 .form__error
+  display block
+  padding-top 3px
   font-size 10px
-  position absolute
-  bottom -15px
-  left 0
   color rgba(255, 255, 255, 0.7);
 
 .form__checkbox
