--- a/src/assets/stylus/pages/profile.styl
+++ b/src/assets/stylus/pages/profile.styl
@@ -11,7 +11,7 @@
   font-weight 200
   font-size 30px
   color steel-gray
-  transition all 0.2s
+  transition unset
 
   @media (max-width breakpoint-xxl)
     font-size 24px
@@ -24,7 +24,6 @@
   &.active
     color #000
     cursor default
-    font-weight normal
   
 .profile__add
   margin-bottom 20px
