--- a/src/assets/stylus/components/status.styl
+++ b/src/assets/stylus/components/status.styl
@@ -1,10 +1,15 @@
 .user-status
-  font-size 13px
+  background radial-gradient(248.22% 257.37% at 9.27% 93.95%, rgba(161,128,255,0.1) 0%, rgba(74,157,255,0.1) 50%, rgba(117,247,255,0.1) 100%)
+  background-color #313135
+  font-size 12px
   line-height 19px
-  color #9EA4AD
+  padding 3px 5px
+  border-radius 5px
+  color #fff
   white-space nowrap
   display flex
   align-items center
+  justify-content center
   word-break break-all
 
   &:before
@@ -17,7 +22,7 @@
     margin-right 5px
   
   &.online
-    color eucalypt
+    color #fff
 
     &:before
       display block   
