--- a/src/assets/stylus/components/push/block.styl
+++ b/src/assets/stylus/components/push/block.styl
@@ -17,8 +17,11 @@
   line-height 22px
 
 .push__content-name
+  display block
+  font-size 15px
+  line-height 17px
   color #000
-  font-weight 600
+  font-weight 400
 
 .push__content-preview
   color eucalypt
