--- a/src/assets/stylus/components/inner-page.styl
+++ b/src/assets/stylus/components/inner-page.styl
@@ -9,8 +9,9 @@
 .news
 
 	.inner-page__main
-		display flex
-		flex-direction row
+		display grid
+		grid-template-columns 1fr 430px
+		gap 20px
 		width 100%
 	
 	.inner-page__main__container 
