dialogs, status online

--- a/src/assets/stylus/components/tooltip.styl
+++ b/src/assets/stylus/components/tooltip.styl
@@ -4,17 +4,18 @@
  
   .tooltip-inner
     background #fff
-    padding 10px
-    font-size font-size-downdefault
+    padding 4px
+    font-size font-size-super-medium-small
     color #2F2F37
     box-shadow box-shadow-main
+	 border-radius border-super-small
  
   &[x-placement^="top"]
     margin-bottom 5px
  
   &[x-placement^="bottom"]
-    margin-top 20px
-    margin-right 60px
+    margin-top 0
+    margin-right 0
  
   &[x-placement^="right"]
     margin-left 5px
