--- a/src/assets/stylus/components/status.styl
+++ b/src/assets/stylus/components/status.styl
@@ -1,14 +1,14 @@
 .user-status
-  background radial-gradient(248.22% 257.37% at 9.27% 93.95%, rgba(161,128,255,0.1) 0%, rgba(74,157,255,0.1) 50%, rgba(117,247,255,0.1) 100%)
-  background-color #313135
+  background-color ui-cl-color-white-theme
+  box-shadow box-shadow-main
   font-size font-size-super-medium-small
   line-height 19px
   padding 3px 5px
   border-radius border-super-small
-  color ui-cl-color-white-theme
-  white-space nowrap
+  color #000
   display flex
   align-items center
+  
   justify-content center
   word-break break-all
 
@@ -22,7 +22,7 @@
     margin-right 5px
   
   &.online
-    color ui-cl-color-white-theme
+    color ui-cl-color-eucalypt
 
     &:before
       display block   
